OLX_Dyplom_ADM/Kube/v1/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olx-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: olx-client
  template:
    metadata:
      labels:
        app: olx-client
    spec:
      nodeSelector:
        role: frontend
      containers:
        - name: olx-client-container
          image: voutuk/olx-client:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: olx-client-service
spec:
  type: LoadBalancer
  selector:
    app: olx-client
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
