OLX_Dyplom_ADM/Kube/v1/k8s-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olx-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: olx-api
  template:
    metadata:
      labels:
        app: olx-api
    spec:
      containers:
        - name: olx-api-container
          image: voutuk/olx-asp-api:2025-02-08-14-18-45
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: olx-api-service
spec:
  type: ClusterIP
  selector:
    app: olx-api
  ports:
    - port: 8080
      targetPort: 8080
