OLX_Dyplom_ADM/Kube/v1/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"  # For file uploads
spec:
  tls:
  - hosts:
    - api.pluton.pp.ua
    secretName: olx-tls-secret
  rules:
  - host: api.pluton.pp.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: olx-backend-service
            port:
              number: 8080
