OLX_Dyplom_ADM/Kube/v1/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: pluton.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olx-client-service
                port:
                  number: 80
    - host: api.pluton.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olx-api-service
                port:
                  number: 8080
